Fix spacing of prefix for questions in game

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h3 {
 }
 
 .choice-prefix {
-    padding: 1.5rem 2.5rem;
+    padding: 2.5rem 2.5rem;
     background-color: #f5a511;
     color: black;
 }
